--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <!-- Metadata to edit -->
 		<title> A practical introduction to git</title>
-		<meta name="author" content="Anna Kennedy">
+		<meta name="author" content="Blackapple">
     <!-- /Metadata to edit -->
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
