--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 
     <!-- Metadata to edit -->
-		<title> A practical introduction to git</title>
+		<title> Reveal.js on Github and Tableau </title>
 		<meta name="author" content="Blackapple">
     <!-- /Metadata to edit -->
 
