--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
         <!-- Title slide -->
 				<section>
-					<h1>A practical introduction to git</h1>
+					<h1>Reveal.js + Github + Tableau</h1>
 					<p>
-						<small>Anna Kennedy</small>
+						<small>Blackapple</small>
 					</p>
 					<aside class="notes">
             Some notes here
