--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 			}
 		</script>
 
+		<!-- Access the API & Load your JavaScript -->
+		<script type='text/JavaScript'
+			src='http://public.tableau.com/javascripts/api/tableau-2.js'></script>
+		<script type="text/javascript" src='Tableau_JS_Embed.js'></script>
+		
 		<!--[if lt IE 9]>
 		<script src="lib/js/html5shiv.js"></script>
 		<![endif]-->
