--- a/index.html
+++ b/index.html
@@ -129,6 +129,23 @@
 					</ul></p>
 				</section>
 
+
+		<!--------------- slide --------------->
+		<section  data-menu-title="Medicare Inpatient Charge Analysis 01"> 
+			<div id='MedicareIPChargeViz01'></div>
+		</section>
+
+		<!--------------- slide --------------->
+		<section  data-menu-title="Medicare Inpatient Charge Analysis 01"> 
+			<div id='MedicareOPChargeViz01'></div>
+		</section>
+
+		<!--------------- slide --------------->
+		<section  data-menu-title="Sacramento Police Dispatch Dashboard"> 
+			<div id='mySacPoliceDispatch'></div>
+		</section>
+
+
 			</div>
 		</div>
 
