--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
 			<div class="slides">
 
 				
-	<!--------------- slide --------------->
+	<!-- slide -->
 				<section  data-menu-title="Medicare Inpatient Charge Analysis 01"> 
 					<div id='MedicareIPChargeViz01'></div>
 				</section>
 
-	<!--------------- slide --------------->
+	<!-- slide -->
 				<section  data-menu-title="Medicare Inpatient Charge Analysis 01"> 
 					<div id='MedicareOPChargeViz01'></div>
 				</section>
 
-	<!--------------- slide --------------->
+	<!-- slide -->
 				<section  data-menu-title="Sacramento Police Dispatch Dashboard"> 
 					<div id='mySacPoliceDispatch'></div>
 				</section>
