--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
 		</script>
 
 		<!-- Access the API & Load your JavaScript -->
-		<script type='text/JavaScript'
-			src='http://public.tableau.com/javascripts/api/tableau-2.js'></script>
-		<script type="text/javascript" src='Tableau_JS_Embed.js'></script>
+		<script src='http://public.tableau.com/javascripts/api/tableau-2.js'></script>
+		<script src='Tableau_JS_Embed.js'></script>
 		
 		<!--[if lt IE 9]>
 		<script src="lib/js/html5shiv.js"></script>
