--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 	</section>
 
 	<!-- slide -->
-				<section  data-menu-title="Medicare Inpatient Charge Analysis 01"> 
+				<!--section  data-menu-title="Medicare Inpatient Charge Analysis 01"> 
 					<div id='MedicareOPChargeViz01'></div>
-				</section>
+				</section-->
 
 	<!-- slide -->
 				<section  data-menu-title="Sacramento Police Dispatch Dashboard"> 
