--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
 				// Bounds for smallest/largest possible scale to apply to content
 				minScale: 0.2,
-				maxScale: 1.5
+				maxScale: 1.5,
 							
 				// Parallax scrolling
 				// parallaxBackgroundImage: 'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg',
