--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@
 				// specified using percentage units.
 				width: 1200,
 				height: 660,
+				
+				width: '100%',
+    				height: '100%',
 
 				// Factor of the display size that should remain empty around the content
 				margin: 0.1,
