--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<center>
 					<div id='tabCon1' style='width:600px; height: 495px; background: #151515; border:7px solid #C3CE2A; border-radius: 15px; box-shadow: 18px 24px 35px #919191; overflow: hidden;'>
 					<center>
-						<iframe src="https://public.tableau.com/views/HiddenGeniusProjectSlides/3?:embed=y&:showVizHome=no" style='width:1040px; height: 562px;'></iframe>
+						<iframe src="https://public.tableau.com/views/MedicareChargeProject_0/IPChargeDashboard?:showVizHome=no&:embed=true&:tabs=no&:toolbar=no" style='width:1200px; height: 660px;'></iframe>												
 					</center>
 
 					</div>
