--- a/index.html
+++ b/index.html
@@ -49,6 +49,19 @@
 					</center>
 				</section>
 						
+				<!-- Slide 03 -->
+				<section>
+					<center>
+						<iframe src="https://public.tableau.com/views/MedicareChargeProject_0/OPChargeDashboard?:showVizHome=no&:embed=true&:tabs=no&:toolbar=no" style='width:1280px; height: 720px;'></iframe>												
+					</center>
+				</section>
+
+				<!-- Slide 04 -->
+				<section>
+					<center>
+						<iframe src="https://public.tableau.com/views/SacPoliceDispatchDashboard/SacramentoPoliceDispatchAnalysis?:showVizHome=no&:embed=true&:tabs=no&:toolbar=no" style='width:1280px; height: 720px;'></iframe>												
+					</center>
+				</section>
 				
 			</div>
 		</div>
