--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						
 				<!-- Slide 01 -->
 				<section>
-					<h2>Tableau and reveal.js</h2>
+					<h2>Man Tsui Dashboard Portfolio</h2>
 					<h5>A Demonstration using Tableau with reveal.js</h5>
 					<p>
 						<small>Presentation created by <a href="https://www.linkedin.com/in/man-tsui-83840415/">Man Tsui</a> </small>
