--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
 				width: '100%',
     				height: '100%',
 				
+				// Loop the presentation
+				loop: false,
+				
 				dependencies: [
 					{ src: 'plugin/markdown/marked.js' },
 					{ src: 'plugin/markdown/markdown.js' },
