--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     				height: '100%',
 				
 				// Loop the presentation
-				loop: false,
+				loop: true,
 				
 				dependencies: [
 					{ src: 'plugin/markdown/marked.js' },
