--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 						<small>reveal.js created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
 						<br>
 						<small>Hakim's original presentation <a href="http://lab.hakim.se/reveal-js/#/">here</a></small>
+						<br>
+						<small>Inspired by earlier works from <a href="https://www.dataplusscience.com/deck2/index.html#/">Jeffrey A. Shaffer</a> / <a href="http://twitter.com/HighVizAbility">@HighVizAbility</a></small>
 
 					</p>
 				</section>
