--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
 				</section>
 			
 				<!-- Slide 02 -->
-				<section>
+				<section data-menu-title="Medicare Inpatient Charge Analysis 01">
 					<center>
 						<iframe src="https://public.tableau.com/views/MedicareChargeProject_0/IPChargeDashboard?:showVizHome=no&:embed=true&:tabs=no&:toolbar=no" style='width:1280px; height: 720px;'></iframe>												
 					</center>
 				</section>
 						
 				<!-- Slide 03 -->
-				<section>
+				<section data-menu-title="Medicare Outpatient Charge Analysis 01">
 					<center>
 						<iframe src="https://public.tableau.com/views/MedicareChargeProject_0/OPChargeDashboard?:showVizHome=no&:embed=true&:tabs=no&:toolbar=no" style='width:1280px; height: 720px;'></iframe>												
 					</center>
 				</section>
 
 				<!-- Slide 04 -->
-				<section>
+				<section data-menu-title="Sacramento Police Dispatch Analysis">
 					<center>
 						<iframe src="https://public.tableau.com/views/SacPoliceDispatchDashboard/SacramentoPoliceDispatchAnalysis?:showVizHome=no&:embed=true&:tabs=no&:toolbar=no" style='width:1280px; height: 720px;'></iframe>												
 					</center>
@@ -136,6 +136,7 @@
 						{ name: 'Moon', theme: 'css/theme/moon.css' },
 						{ name: 'Solarized', theme: 'css/theme/solarized.css' }
 					],
+					themes: false,
 
 					// Specifies if the transitions menu panel will be shown.
 					transitions: true,
