--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
 				<!-- Slide 01 -->
 				<section>
 					<h2>Man Tsui Dashboard Portfolio</h2>
-					<h5>A Demonstration using Tableau with reveal.js</h5>
+					<h5>A Demonstration using Tableau with reveal.js-menu</h5>
 					<p>
 						<small>Presentation created by <a href="https://www.linkedin.com/in/man-tsui-83840415/">Man Tsui</a> </small>
 						<br>
 						<small>reveal.js created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
 						<br>
 						<small>Hakim's original presentation <a href="http://lab.hakim.se/reveal-js/#/">here</a></small>
+						<br>
+						<small>reveal.js-menu plugin created by <a href="https://github.com/denehyg/reveal.js-menu">Greg Denehy</a> / <a href="http://twitter.com/gregdenehy">@gregdenehy</a></small>
 						<br>
 						<small>Inspired by earlier works from <a href="https://www.dataplusscience.com/deck2/index.html#/">Jeffrey A. Shaffer</a> / <a href="http://twitter.com/HighVizAbility">@HighVizAbility</a></small>
 
