--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
 			<div class="slides">
 				
 				<!-- Slide 01 -->
-				<section>
+				<section data-background-image="img/success-concept-digital-picture.jpg">
 					<h2>Man Tsui Dashboard Portfolio</h2>
 					<h5>A Demonstration using Tableau with reveal.js-menu</h5>
 					<p>
-						<img src="img/success-concept-digital-picture.jpg" alt="background">
 						<small>Presentation created by <a href="https://www.linkedin.com/in/man-tsui-83840415/">Man Tsui</a> </small>
 						<br>
 						<small>reveal.js created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
