--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<section data-background-image="img/success-concept-digital-picture.jpg">
 					<h2>Man Tsui Dashboard Portfolio</h2>
 					<h5>A Demonstration using Tableau with reveal.js-menu</h5>
-					<p>
+					<p style="color:black;">
 						<small>Presentation created by <a href="https://www.linkedin.com/in/man-tsui-83840415/">Man Tsui</a> </small>
 						<br>
 						<small>reveal.js created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
