--- a/index.html
+++ b/index.html
@@ -70,7 +70,13 @@
 					<div id='myIPMedicareAvgPayment'></div>
 					</center>
 				</section>	
-						
+
+				<!-- Slide 05-->
+				<section  data-menu-title="Medicare Outpatient Average Payment"> 
+					<center>
+					<div id='myOPMedicareAvgPayment'></div>
+					</center>
+				</section>							
 						
 				<!-- Slide 15-->
 				<section  data-menu-title="Sacramento Police Dispatch Analysis">
