--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
 					<div id='myOPMedicareAvgPayment'></div>
 					</center>
 				</section>							
+
+				<!-- Slide 06-->
+				<section  data-menu-title="Medicare IP OP Payments by Hospital"> 
+					<center>
+					<div id='myIPOP_Pay_Hospital'></div>
+					</center>
+				</section>						
 						
 				<!-- Slide 15-->
 				<section  data-menu-title="Sacramento Police Dispatch Analysis">
