--- a/index.html
+++ b/index.html
@@ -70,7 +70,14 @@
 					<div id='myIPOP_Pay_Hospital'></div>
 					</center>
 				</section>						
-						
+
+				<!-- Slide 05-->
+				<section  data-menu-title="Sample Tableau D3 Integration with Superstore"> 
+					<center>
+					<div id='mySuperstore_D3'></div>
+					</center>
+				</section>						
+
 				<!-- Slide 15-->
 				<section  data-menu-title="Sacramento Police Dispatch Analysis">
 					<center>
