--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<!-- Slide 05-->
 				<section  data-menu-title="Sample Tableau D3 Integration with Superstore"> 
 					<center>
-					<div id='mySuperstore_D3'></div>
+					<div id='mySuperStore_D3'></div>
 					</center>
 				</section>						
 
