--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
 					<center>
 				</section>
 				
+				<!-- Slide 02 -->
+				<section  data-menu-title="Medicare Cost Report: Hospital Statistics"> 
+					<center>
+					<div id='myCMS_Cost_Hosp_Stat_Viz'></div>
+					</center>
+				</section>
+						
 				<!-- Slide 04 -->
 				<section  data-menu-title="Medicare Inpatient Charge Analysis"> 
 					<center>
