--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				</section>						
 
 				<!-- Slide 07-->
-				<section  data-menu-title="Sample Tableau D3 Integration with Superstore"> 
+				<section  data-menu-title="Sample Tableau D3 with Superstore (Not fully intergrated)"> 
 					<center>
 					<div id='mySuperStore_D3'></div>
 					</center>
